# ReadandQues

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yaml  gunicorn.conf.py  implementation.md  main.py  pyproject.toml  requirements.txt  run.sh  test_chroma.py  test_curl.py  test_django.py  test_path.py  test_pydantic.py  test_views.py  tree.txt
ReadAndQues/: manage.py  trafilatura.cfg  translate_accounts.py  translate_articles.py  translate_remaining.py  translate_services.py  translate_views.py  update_home.py
ReadAndQues/AI_core/: __init__.py  bm25_retriever.py  config.py  graph.py  llm.py  prompts.py  schemas.py
ReadAndQues/ReadAndQues/: __init__.py  asgi.py  celery.py  settings.py  settings_prod.py  urls.py  wsgi.py
ReadAndQues/accounts/: admin.py  backends.py  models.py  tests.py  urls.py  views.py
ReadAndQues/ai_core/: config.py  graph.py  prompts.py  schemas.py
ReadAndQues/articles/: apps.py  models.py  services.py  tests.py  urls.py  views.py
ReadAndQues/pipeline/: __init__.py  apps.py  orchestrator.py
docs/: 01_project_structure.md  02_ReadAndQues.md  03_worker_service.md
docs/diary/: 2026-07-22_likelipop.txt
nginx/: default.conf
nginx/ssl/: .gitkeep
worker_service/: Dockerfile  __init__.py  celery_app.py  tasks.py
worker_service/ai_core/: __init__.py  chroma_client.py  config.py  graph.py  prompts.py  schemas.py
worker_service/data_pipeline/: __init__.py  bronze_batch.py  bronze_one.py  gold.py  init_db.py  pipeline_config.py  rss_feeds.txt  silver.py
worker_service/database/: __init__.py
(+69 files in other folders)
