[project]
name = "readandques"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "dotenv>=0.9.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "lxml-html-clean>=0.4.5",
    "newspaper3k>=0.2.8",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "psycopg2-binary>=2.9.12",
    "chromadb>=1.5.9",
]
