[project]
name = "readandques"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "dotenv>=0.9.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "lxml-html-clean>=0.4.5",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "psycopg2-binary>=2.9.12",
    "trafilatura>=2.1,<3",
    "chromadb>=1.5.9",
    "rank-bm25>=0.2.2",
    "spacy>=3.8.14",
    "newspaper3k>=0.2.8",
    "celery>=5.5,<6",
    "redis>=5,<6",
]
